[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Signs/Signs-Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/adbox/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://assets/Sprites/sign_poster.png" type="Texture" id=3]
[ext_resource path="res://assets/Sound/sfxr.me/text.wav" type="AudioStream" id=4]
[ext_resource path="res://levels/Signs/Tutorial/TutorialSign.gd" type="Script" id=5]
[ext_resource path="res://UI/TutorialSign/TutorialSign-Theme.tres" type="Theme" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="TutorialSign" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
input_pickable = false
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Node2D" parent="."]
z_index = 4

[node name="Canvas" type="PanelContainer" parent="UI"]
margin_left = -184.0
margin_top = -152.0
margin_right = 184.0
margin_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 6 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="PanelContainer" parent="UI/Canvas"]
margin_top = 85.0
margin_right = 368.0
margin_bottom = 128.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Canvas/Prompt"]
margin_left = 7.0
margin_top = 7.0
margin_right = 361.0
margin_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Clica-me para leres![/center]"
text = "Clica-me para leres!"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Dialogue" type="PanelContainer" parent="UI/Canvas"]
margin_top = 49.0
margin_right = 368.0
margin_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 29 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="NinePatchRect" parent="UI/Canvas/Dialogue"]
margin_left = 7.0
margin_top = 7.0
margin_right = 361.0
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
message_sound = ExtResource( 4 )
font = ExtResource( 1 )
characterRevealDelay = 0.05
margin_top_bottom = 0
margin_left_right = 0

[connection signal="body_entered" from="Area2D" to="." method="_onPlayerEnteredSignArea"]
[connection signal="body_exited" from="Area2D" to="." method="_onPlayerExitedSignArea"]
[connection signal="gui_input" from="UI/Canvas/Prompt" to="." method="_onPlayerStartedReading"]
[connection signal="gui_input" from="UI/Canvas/Dialogue" to="UI/Canvas/Dialogue/DialogueBox" method="_on_Dialogue_gui_input"]
[connection signal="dialogue_exit" from="UI/Canvas/Dialogue/DialogueBox" to="." method="_on_DialogueBox_dialogue_exit"]
